Feature/calculo precio (#26)
* ci(tariff): cobertura JaCoCo y quality gate de SonarCloud en el pipeline

* ci(tariff): apuntar SonarCloud a la organizacion 1dd0rv

* ci(tariff): quitar -DskipTests, los tests del dominio ya corren

* build(tariff): fijar version de sonar-maven-plugin en pom.xml

* ci(tariff): usar JDK 21 en el runner para el analisis de SonarCloud

SonarQube Cloud dejo de soportar el analisis con JDK 17 desde julio
2026. El pom sigue compilando a bytecode 17.

* ci(tariff): usar JDK 21 en el runner para el analisis de SonarCloud

SonarQube Cloud dejo de soportar el analisis con JDK 17 desde julio
2026. El pom sigue compilando a bytecode 17.

* ci: quitar release123 de los triggers, mantener main/release

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* ci(tariff): postgres para los tests de integracion y sonar no bloqueante (#20)

* Añadidos los test y el BeanConfiguration

* ci(tariff): postgres como service container y sonar no bloqueante

El merge de main quito -DskipTests sin anadir Postgres al workflow: los
@SpringBootTest (TariffRestAdapterTest) necesitan un DataSource real y
la conexion fallaba en el runner. Mismo fix ya aplicado en release
(PR #20).

* fix(tariff): aplicar correcciones de code review del PR #24

- Quitar el bean ObjectMapper manual (BeanConfiguration): pisaba la
  auto-configuracion de Jackson sin necesidad.
- TariffPersistenceAdapter: @Component -> @Repository, para que Spring
  traduzca las excepciones de acceso a datos.
- Unificar GetAllTariffsUseCase a Stream.toList(), igual que el resto
  de los use cases.
- Quitar comentarios residuales en TariffCreateRequest y
  TariffStatusRequest.
- pom.xml: quitar el TODO de version de JaCoCo y el plugin
  jacoco-maven-plugin duplicado (quedo declarado dos veces al mezclar
  dos ramas que lo añadieron por separado), mas trailing newline.

* fix(tariff): restaurar el bean ObjectMapper, TariffRestAdapterTest lo necesita

Se quito en 6121ccd asumiendo que JacksonAutoConfigura